k8s/apps/meow/jackett/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  labels:
    app: jackett
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
        - name: jackett
          image: linuxserver/jackett:0.24.2398
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9117
          volumeMounts:
            - name: jackett-config
              mountPath: /config
            - name: jackett-blackhole
              mountPath: /downloads
          resources:
            requests:
              cpu: 150m
              memory: 256Mi
            limits:
              memory: 256Mi
      volumes:
        - name: jackett-config
          persistentVolumeClaim:
            claimName: jackett-config
        - name: jackett-blackhole
          persistentVolumeClaim:
            claimName: jackett-blackhole
