k8s/apps/meow/jackett/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: jackett
spec:
  type: ClusterIP
  selector:
    app: jackett
  ports:
    - name: http
      port: 80
      targetPort: 9117
