k8s/apps/meow/jackett/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jackett
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`trackers.meow.litarvan.com`)
      services:
        - name: jackett
          port: http
