k8s/apps/meow/jackett/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett
spec:
  rules:
    - host: trackers.meow.litarvan.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jackett
                port:
                  name: http
  tls:
    - hosts:
        - trackers.meow.litarvan.dev
      secretName: trackers-meow-tls
